...
      index: 0,
      routes: [{name: 'AuthStack'}],
    });
  };

  return (
    <SafeAreaView style={styles.viewMain} testID={'settingsListScreen'}>
      <ScrollView
        contentContainerStyle={styles.scrollViewSettings}
        showsVerticalScrollIndicator={false}>
        <View style={styles.viewSetting}>
          <Setting
            description={t(
...
          isLoading={isLoading}
          label={
            isLoading
              ? t('CORE.SETTINGS.SETTINGS_LIST.BUTTON__LOADING')
              : t('CORE.SETTINGS.SETTINGS_LIST.BUTTON__SIGN_OUT')
          }
          testID={'signOutButton'}
          onPress={signOut}
        />
      </View>
    </SafeAreaView>
  );
}
...
