...
    tabBarActiveTintColor: '#F12C4C',
    tabBarButtonTestID: (() => {
      switch (name) {
        case 'CountriesStack':
          return 'tabBarItemCountries';
        case 'SettingsStack':
          return 'tabBarItemSettings';
        default:
          return undefined;
      }
    })(),
    tabBarIcon: ({color, focused, size}) => {
      let iconName;
...
